# Hyperbolic-Embedding

./: README.md
results/ICLR_F1/: adjnoun_means_20180103-124257.csv  all_means.csv  football_errors_20180103-152217.csv  football_means_20180103-152217.csv  karate_errors_20180103-173145.csv  karate_means_20180103-173145.csv  political_blogs_errors_20180103-130415.csv
results/ICLR_embeddings/: Win_20180103-172926.csv
results/adjnoun/: macro20170518-081312.csv  macro20170518-082626.csv  macro20170518-093153.csv  macro20170518-093641.csv  macro20170518-102835.csv  micro20170517-203159.csv  micro20170518-081312.csv  micro20170518-082626.csv  micro20170518-093153.csv  micro20170518-093641.csv  micro20170518-102835.csv  pvalues20170517-203159.csv  pvalues20170518-081312.csv  pvalues20170518-082626.csv  pvalues20170518-093153.csv  pvalues20170518-093641.csv  pvalues20170518-102835.csv
results/all/: adjnoun_errors.csv  adjnoun_errors_20170822-183858.csv  adjnoun_errors_20170822-192942.csv  adjnoun_errors_20170822-194754.csv  adjnoun_errors_20170822-200040.csv  adjnoun_errors_20170823-110253.csv  adjnoun_errors_20170823-111937.csv  adjnoun_errors_20170823-142316.csv  adjnoun_errors_20170823-154028.csv  (+231 more)
src/cpp/: CMakeLists.txt  a.out  build_tf.bat  generate_batch.bat  generate_batch.cpp  test_harness.cpp  test_harness.h  tf_function_test.bat  tf_function_test.cpp  word2vec_ops.cpp  zero_out.cc
test/: test_hyperbolic_cartesian_gradients.py  test_hyperbolic_distance.py  test_hyperbolic_embeddings.py  test_lorentzian_embedding.py  test_sampler.py  test_utils.py
(+243 files in other folders)
